kubernetes/testing/portainer/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
