kubernetes/testing/portainer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
    - port: 9443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
